Base Layout Created

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <title>Library</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <div class="header">
+        <div class="left">
+            <object data="icons/book-open-variant-outline.svg" type="image/svg+xml" class="title"></object>
+            <h1 class="title" id="library">Library</h1>
+        </div>
+        <div class="right">
+            <button>Add Book</button>
+            <button>Delete All</button>
+        </div>
+    </div>
+
+    <div class="content">
+
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
