Functionality for Add Book and Delete ALl

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h1 class="title" id="library">Library</h1>
         </div>
         <div class="right">
-            <button>Add Book</button>
-            <button>Delete All</button>
+            <button id="add" class="large-button">Add Book</button>
+            <button id="delete-all" class="large-button">Delete All</button>
         </div>
     </div>
 
